# carlton-ai

./: .gitignore  README.md  carlton.yaml  pyproject.toml
.zed/: settings.json
carlton/: get_chat_ai.py  main.py  prompts.py
