[tool.poetry]
name = "carlton"
version = "0.1.0"
description = "A coding assistant hobby project"
authors = ["TJ Eastmond <tj.eastmond@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "carlton" }]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.12.07"
prompt-toolkit = "^3.0.48"
termcolor = "^2.5.0"
ollama = "^0.3.3"
openai = "^1.54.3"
pyyaml = "^6.0.2"
pynput = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
