[tool.poetry]
name = "carlton"
version = "0.1.0"
description = "A coding assistant hobby project"
authors = ["TJ Eastmond <tj.eastmond@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "carlton" }]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.12.07"
termcolor = "^2.5.0"
ollama = "^0.3.3"
openai = "^1.54.3"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
